[bug fix] DR-1925: Channel pack price alignment issue

--- a/src/main/webapp/src/scss/main/components/channel-pack-combos.scss
+++ b/src/main/webapp/src/scss/main/components/channel-pack-combos.scss
@@ -38,6 +38,7 @@
     }
     sub {
       font-size: $font-size--sm;
+      position: initial;
     }
   }
   &.channel-pack-combos-highlight {
